// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Button/Icon Button Component 1`] = `
<div>
  <h3
    className="sc-htpNat bmPwTJ"
  >
    Button/Icon Button
      →  
    Component
  </h3>
  <div
    className="sc-bxivhb fZfWO"
  >
    <div
      className="sc-bwzfXH EgZdJ"
    >
      <center>
        Not Implemented
      </center>
    </div>
  </div>
</div>
`;

exports[`Storyshots Button/Icon Button Prop Combinations 1`] = `
<div>
  <h3
    className="sc-htpNat bmPwTJ"
  >
    Button/Icon Button
      →  
    Prop Combinations
  </h3>
  <div
    className="sc-bxivhb fZfWO"
  >
    <div
      className="sc-bwzfXH EgZdJ"
    >
      <div>
        <div
          className="sc-bdVaJa flAlLV"
        >
          <center>
            Not Implemented
          </center>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Button/Outline Button Component 1`] = `
<div>
  <h3
    className="sc-htpNat bmPwTJ"
  >
    Button/Outline Button
      →  
    Component
  </h3>
  <div
    className="sc-bxivhb fZfWO"
  >
    <div
      className="sc-bwzfXH EgZdJ"
    >
      <center>
        Not Implemented
      </center>
    </div>
  </div>
</div>
`;

exports[`Storyshots Button/Outline Button Prop Combinations 1`] = `
<div>
  <h3
    className="sc-htpNat bmPwTJ"
  >
    Button/Outline Button
      →  
    Prop Combinations
  </h3>
  <div
    className="sc-bxivhb fZfWO"
  >
    <div
      className="sc-bwzfXH EgZdJ"
    >
      <div>
        <div
          className="sc-bdVaJa flAlLV"
        >
          <center>
            Not Implemented
          </center>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Button/Solid Button Component 1`] = `
<div>
  <h3
    className="sc-htpNat bmPwTJ"
  >
    Button/Solid Button
      →  
    Component
  </h3>
  <div
    className="sc-bxivhb fZfWO"
  >
    <div
      className="sc-bwzfXH EgZdJ"
    >
      <button
        className="sc-ifAKCX jipgDf"
        color="black"
        size="small"
      >
        ButtonText
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Button/Solid Button Prop Combinations 1`] = `
<div>
  <h3
    className="sc-htpNat bmPwTJ"
  >
    Button/Solid Button
      →  
    Prop Combinations
  </h3>
  <div
    className="sc-bxivhb fZfWO"
  >
    <div
      className="sc-bwzfXH EgZdJ"
    >
      <div>
        <div
          className="sc-bdVaJa flAlLV"
        >
          <button
            className="sc-ifAKCX jGFSJH"
            color="black"
            size="small"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa flAlLV"
        >
          <button
            className="sc-ifAKCX bNIsPd"
            color="black"
            size="small"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa flAlLV"
        >
          <button
            className="sc-ifAKCX kzhdBD"
            color="black"
            size="small"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa flAlLV"
        >
          <button
            className="sc-ifAKCX kGQeYc"
            color="black"
            size="small"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa flAlLV"
        >
          <button
            className="sc-ifAKCX jipgDf"
            color="black"
            size="small"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa flAlLV"
        >
          <button
            className="sc-ifAKCX jgCYIc"
            color="black"
            size="small"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa flAlLV"
        >
          <button
            className="sc-ifAKCX jeUkOc"
            color="black"
            size="small"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa flAlLV"
        >
          <button
            className="sc-ifAKCX ewXXWx"
            color="black"
            size="small"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa flAlLV"
        >
          <button
            className="sc-ifAKCX OyAGS"
            color="transparent"
            size="small"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa flAlLV"
        >
          <button
            className="sc-ifAKCX cxLHZK"
            color="transparent"
            size="small"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa flAlLV"
        >
          <button
            className="sc-ifAKCX yoABQ"
            color="transparent"
            size="small"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa flAlLV"
        >
          <button
            className="sc-ifAKCX hFbQUo"
            color="transparent"
            size="small"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa flAlLV"
        >
          <button
            className="sc-ifAKCX fMdlih"
            color="transparent"
            size="small"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa flAlLV"
        >
          <button
            className="sc-ifAKCX bDWaLm"
            color="transparent"
            size="small"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa flAlLV"
        >
          <button
            className="sc-ifAKCX ggOodY"
            color="transparent"
            size="small"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa flAlLV"
        >
          <button
            className="sc-ifAKCX kadLjr"
            color="transparent"
            size="small"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa flAlLV"
        >
          <button
            className="sc-ifAKCX gMFtQp"
            color="muted"
            size="small"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa flAlLV"
        >
          <button
            className="sc-ifAKCX cLiYex"
            color="muted"
            size="small"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa flAlLV"
        >
          <button
            className="sc-ifAKCX gTEdui"
            color="muted"
            size="small"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa flAlLV"
        >
          <button
            className="sc-ifAKCX jzPjVr"
            color="muted"
            size="small"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa flAlLV"
        >
          <button
            className="sc-ifAKCX irqmHq"
            color="muted"
            size="small"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa flAlLV"
        >
          <button
            className="sc-ifAKCX kJFJRP"
            color="muted"
            size="small"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa flAlLV"
        >
          <button
            className="sc-ifAKCX cmWbOu"
            color="muted"
            size="small"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa flAlLV"
        >
          <button
            className="sc-ifAKCX cVcdeb"
            color="muted"
            size="small"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa flAlLV"
        >
          <button
            className="sc-ifAKCX fzxDVP"
            color="white"
            size="small"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa flAlLV"
        >
          <button
            className="sc-ifAKCX cPovYI"
            color="white"
            size="small"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa flAlLV"
        >
          <button
            className="sc-ifAKCX ahsVX"
            color="white"
            size="small"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa flAlLV"
        >
          <button
            className="sc-ifAKCX fMkKYD"
            color="white"
            size="small"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa flAlLV"
        >
          <button
            className="sc-ifAKCX wkMCA"
            color="white"
            size="small"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa flAlLV"
        >
          <button
            className="sc-ifAKCX hkIohq"
            color="white"
            size="small"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa flAlLV"
        >
          <button
            className="sc-ifAKCX dCkwXX"
            color="white"
            size="small"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa flAlLV"
        >
          <button
            className="sc-ifAKCX bKJumM"
            color="white"
            size="small"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa flAlLV"
        >
          <button
            className="sc-ifAKCX fncxgm"
            color="blue"
            size="small"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa flAlLV"
        >
          <button
            className="sc-ifAKCX uWMEJ"
            color="blue"
            size="small"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa flAlLV"
        >
          <button
            className="sc-ifAKCX bPfCsr"
            color="blue"
            size="small"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa flAlLV"
        >
          <button
            className="sc-ifAKCX cudbBU"
            color="blue"
            size="small"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa flAlLV"
        >
          <button
            className="sc-ifAKCX fbbXTH"
            color="blue"
            size="small"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa flAlLV"
        >
          <button
            className="sc-ifAKCX hWRcSw"
            color="blue"
            size="small"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa flAlLV"
        >
          <button
            className="sc-ifAKCX gppBfJ"
            color="blue"
            size="small"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa flAlLV"
        >
          <button
            className="sc-ifAKCX gpXFKp"
            color="blue"
            size="small"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa flAlLV"
        >
          <button
            className="sc-ifAKCX iZPIqJ"
            color="primary"
            size="small"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa flAlLV"
        >
          <button
            className="sc-ifAKCX ejyPzB"
            color="primary"
            size="small"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa flAlLV"
        >
          <button
            className="sc-ifAKCX jXFBRt"
            color="primary"
            size="small"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa flAlLV"
        >
          <button
            className="sc-ifAKCX ciSsJH"
            color="primary"
            size="small"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa flAlLV"
        >
          <button
            className="sc-ifAKCX AsxxH"
            color="primary"
            size="small"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa flAlLV"
        >
          <button
            className="sc-ifAKCX gZYaRL"
            color="primary"
            size="small"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa flAlLV"
        >
          <button
            className="sc-ifAKCX jrPcKR"
            color="primary"
            size="small"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa flAlLV"
        >
          <button
            className="sc-ifAKCX kbQcoq"
            color="primary"
            size="small"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa flAlLV"
        >
          <button
            className="sc-ifAKCX jbeDIV"
            color="secondary"
            size="small"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa flAlLV"
        >
          <button
            className="sc-ifAKCX biJJHN"
            color="secondary"
            size="small"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa flAlLV"
        >
          <button
            className="sc-ifAKCX cEwfzf"
            color="secondary"
            size="small"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa flAlLV"
        >
          <button
            className="sc-ifAKCX dGkDkc"
            color="secondary"
            size="small"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa flAlLV"
        >
          <button
            className="sc-ifAKCX fAlzpb"
            color="secondary"
            size="small"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa flAlLV"
        >
          <button
            className="sc-ifAKCX grTguW"
            color="secondary"
            size="small"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa flAlLV"
        >
          <button
            className="sc-ifAKCX gkVVeD"
            color="secondary"
            size="small"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa flAlLV"
        >
          <button
            className="sc-ifAKCX gxQIfu"
            color="secondary"
            size="small"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa flAlLV"
        >
          <button
            className="sc-ifAKCX earwdz"
            color="black"
            size="medium"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa flAlLV"
        >
          <button
            className="sc-ifAKCX iTdnwI"
            color="black"
            size="medium"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa flAlLV"
        >
          <button
            className="sc-ifAKCX hpwJVt"
            color="black"
            size="medium"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa flAlLV"
        >
          <button
            className="sc-ifAKCX laucSj"
            color="black"
            size="medium"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa flAlLV"
        >
          <button
            className="sc-ifAKCX jufpAE"
            color="black"
            size="medium"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa flAlLV"
        >
          <button
            className="sc-ifAKCX hNjtLf"
            color="black"
            size="medium"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa flAlLV"
        >
          <button
            className="sc-ifAKCX julDTY"
            color="black"
            size="medium"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa flAlLV"
        >
          <button
            className="sc-ifAKCX llmMCU"
            color="black"
            size="medium"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa flAlLV"
        >
          <button
            className="sc-ifAKCX goBAJV"
            color="transparent"
            size="medium"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa flAlLV"
        >
          <button
            className="sc-ifAKCX dkouIP"
            color="transparent"
            size="medium"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa flAlLV"
        >
          <button
            className="sc-ifAKCX HtnQD"
            color="transparent"
            size="medium"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa flAlLV"
        >
          <button
            className="sc-ifAKCX dhIBSz"
            color="transparent"
            size="medium"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa flAlLV"
        >
          <button
            className="sc-ifAKCX gNIsjX"
            color="transparent"
            size="medium"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa flAlLV"
        >
          <button
            className="sc-ifAKCX dhueyD"
            color="transparent"
            size="medium"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa flAlLV"
        >
          <button
            className="sc-ifAKCX kklLzc"
            color="transparent"
            size="medium"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa flAlLV"
        >
          <button
            className="sc-ifAKCX dfppAL"
            color="transparent"
            size="medium"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa flAlLV"
        >
          <button
            className="sc-ifAKCX fOSJlG"
            color="muted"
            size="medium"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa flAlLV"
        >
          <button
            className="sc-ifAKCX iqLhlr"
            color="muted"
            size="medium"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa flAlLV"
        >
          <button
            className="sc-ifAKCX fWszMH"
            color="muted"
            size="medium"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa flAlLV"
        >
          <button
            className="sc-ifAKCX kaGAEV"
            color="muted"
            size="medium"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa flAlLV"
        >
          <button
            className="sc-ifAKCX kJmbry"
            color="muted"
            size="medium"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa flAlLV"
        >
          <button
            className="sc-ifAKCX WpPQc"
            color="muted"
            size="medium"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa flAlLV"
        >
          <button
            className="sc-ifAKCX bBQAaM"
            color="muted"
            size="medium"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa flAlLV"
        >
          <button
            className="sc-ifAKCX cwdBRd"
            color="muted"
            size="medium"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa flAlLV"
        >
          <button
            className="sc-ifAKCX kkibZg"
            color="white"
            size="medium"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa flAlLV"
        >
          <button
            className="sc-ifAKCX xcJjm"
            color="white"
            size="medium"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa flAlLV"
        >
          <button
            className="sc-ifAKCX gzDMqE"
            color="white"
            size="medium"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa flAlLV"
        >
          <button
            className="sc-ifAKCX geAdmX"
            color="white"
            size="medium"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa flAlLV"
        >
          <button
            className="sc-ifAKCX dDqeDR"
            color="white"
            size="medium"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa flAlLV"
        >
          <button
            className="sc-ifAKCX kBJTGi"
            color="white"
            size="medium"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa flAlLV"
        >
          <button
            className="sc-ifAKCX hDHCxG"
            color="white"
            size="medium"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa flAlLV"
        >
          <button
            className="sc-ifAKCX kXLEri"
            color="white"
            size="medium"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa flAlLV"
        >
          <button
            className="sc-ifAKCX bbOBMb"
            color="blue"
            size="medium"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa flAlLV"
        >
          <button
            className="sc-ifAKCX bGnyMd"
            color="blue"
            size="medium"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa flAlLV"
        >
          <button
            className="sc-ifAKCX fwmiEm"
            color="blue"
            size="medium"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa flAlLV"
        >
          <button
            className="sc-ifAKCX hOhRCp"
            color="blue"
            size="medium"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa flAlLV"
        >
          <button
            className="sc-ifAKCX hiPiWg"
            color="blue"
            size="medium"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa flAlLV"
        >
          <button
            className="sc-ifAKCX hiISpc"
            color="blue"
            size="medium"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa flAlLV"
        >
          <button
            className="sc-ifAKCX kQPFGa"
            color="blue"
            size="medium"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa flAlLV"
        >
          <button
            className="sc-ifAKCX fWyDGO"
            color="blue"
            size="medium"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa flAlLV"
        >
          <button
            className="sc-ifAKCX kORwbc"
            color="primary"
            size="medium"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa flAlLV"
        >
          <button
            className="sc-ifAKCX kLyegi"
            color="primary"
            size="medium"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa flAlLV"
        >
          <button
            className="sc-ifAKCX fePTfn"
            color="primary"
            size="medium"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa flAlLV"
        >
          <button
            className="sc-ifAKCX cqPrMK"
            color="primary"
            size="medium"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa flAlLV"
        >
          <button
            className="sc-ifAKCX doOUeE"
            color="primary"
            size="medium"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa flAlLV"
        >
          <button
            className="sc-ifAKCX cZAlcA"
            color="primary"
            size="medium"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa flAlLV"
        >
          <button
            className="sc-ifAKCX emNJcR"
            color="primary"
            size="medium"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa flAlLV"
        >
          <button
            className="sc-ifAKCX iqpZAv"
            color="primary"
            size="medium"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa flAlLV"
        >
          <button
            className="sc-ifAKCX kofWPo"
            color="secondary"
            size="medium"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa flAlLV"
        >
          <button
            className="sc-ifAKCX cWNlEf"
            color="secondary"
            size="medium"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa flAlLV"
        >
          <button
            className="sc-ifAKCX iTgEC"
            color="secondary"
            size="medium"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa flAlLV"
        >
          <button
            className="sc-ifAKCX dcpioh"
            color="secondary"
            size="medium"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa flAlLV"
        >
          <button
            className="sc-ifAKCX bcled"
            color="secondary"
            size="medium"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa flAlLV"
        >
          <button
            className="sc-ifAKCX kgSYyq"
            color="secondary"
            size="medium"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa flAlLV"
        >
          <button
            className="sc-ifAKCX iwCdBu"
            color="secondary"
            size="medium"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa flAlLV"
        >
          <button
            className="sc-ifAKCX biZzNV"
            color="secondary"
            size="medium"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa flAlLV"
        >
          <button
            className="sc-ifAKCX jEZeCQ"
            color="black"
            size="large"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa flAlLV"
        >
          <button
            className="sc-ifAKCX dtAdrb"
            color="black"
            size="large"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa flAlLV"
        >
          <button
            className="sc-ifAKCX iOxesS"
            color="black"
            size="large"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa flAlLV"
        >
          <button
            className="sc-ifAKCX gwbxwC"
            color="black"
            size="large"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa flAlLV"
        >
          <button
            className="sc-ifAKCX fyBsIu"
            color="black"
            size="large"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa flAlLV"
        >
          <button
            className="sc-ifAKCX fWBZYL"
            color="black"
            size="large"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa flAlLV"
        >
          <button
            className="sc-ifAKCX osXkV"
            color="black"
            size="large"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa flAlLV"
        >
          <button
            className="sc-ifAKCX fSTUcf"
            color="black"
            size="large"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa flAlLV"
        >
          <button
            className="sc-ifAKCX bzDBBH"
            color="transparent"
            size="large"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa flAlLV"
        >
          <button
            className="sc-ifAKCX ljKwwW"
            color="transparent"
            size="large"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa flAlLV"
        >
          <button
            className="sc-ifAKCX cNiXZO"
            color="transparent"
            size="large"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa flAlLV"
        >
          <button
            className="sc-ifAKCX blpvBX"
            color="transparent"
            size="large"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa flAlLV"
        >
          <button
            className="sc-ifAKCX LtQpy"
            color="transparent"
            size="large"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa flAlLV"
        >
          <button
            className="sc-ifAKCX JgFxK"
            color="transparent"
            size="large"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa flAlLV"
        >
          <button
            className="sc-ifAKCX jLUvNN"
            color="transparent"
            size="large"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa flAlLV"
        >
          <button
            className="sc-ifAKCX epXlpa"
            color="transparent"
            size="large"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa flAlLV"
        >
          <button
            className="sc-ifAKCX cNmIxo"
            color="muted"
            size="large"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa flAlLV"
        >
          <button
            className="sc-ifAKCX dolSxH"
            color="muted"
            size="large"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa flAlLV"
        >
          <button
            className="sc-ifAKCX hukYdh"
            color="muted"
            size="large"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa flAlLV"
        >
          <button
            className="sc-ifAKCX bxdXuK"
            color="muted"
            size="large"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa flAlLV"
        >
          <button
            className="sc-ifAKCX fuJLNb"
            color="muted"
            size="large"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa flAlLV"
        >
          <button
            className="sc-ifAKCX fwyVMZ"
            color="muted"
            size="large"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa flAlLV"
        >
          <button
            className="sc-ifAKCX gNURFz"
            color="muted"
            size="large"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa flAlLV"
        >
          <button
            className="sc-ifAKCX cGRzeE"
            color="muted"
            size="large"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa flAlLV"
        >
          <button
            className="sc-ifAKCX Xovrv"
            color="white"
            size="large"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa flAlLV"
        >
          <button
            className="sc-ifAKCX fNSJmP"
            color="white"
            size="large"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa flAlLV"
        >
          <button
            className="sc-ifAKCX fHvdFp"
            color="white"
            size="large"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa flAlLV"
        >
          <button
            className="sc-ifAKCX ihIzja"
            color="white"
            size="large"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa flAlLV"
        >
          <button
            className="sc-ifAKCX buoJbE"
            color="white"
            size="large"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa flAlLV"
        >
          <button
            className="sc-ifAKCX bWyVWo"
            color="white"
            size="large"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa flAlLV"
        >
          <button
            className="sc-ifAKCX gNfRcl"
            color="white"
            size="large"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa flAlLV"
        >
          <button
            className="sc-ifAKCX iteEIK"
            color="white"
            size="large"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa flAlLV"
        >
          <button
            className="sc-ifAKCX fipFNg"
            color="blue"
            size="large"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa flAlLV"
        >
          <button
            className="sc-ifAKCX ibGeHE"
            color="blue"
            size="large"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa flAlLV"
        >
          <button
            className="sc-ifAKCX hHQiad"
            color="blue"
            size="large"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa flAlLV"
        >
          <button
            className="sc-ifAKCX iPzTxA"
            color="blue"
            size="large"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa flAlLV"
        >
          <button
            className="sc-ifAKCX eZjUdp"
            color="blue"
            size="large"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa flAlLV"
        >
          <button
            className="sc-ifAKCX axlnU"
            color="blue"
            size="large"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa flAlLV"
        >
          <button
            className="sc-ifAKCX lnWImb"
            color="blue"
            size="large"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa flAlLV"
        >
          <button
            className="sc-ifAKCX ctuavF"
            color="blue"
            size="large"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa flAlLV"
        >
          <button
            className="sc-ifAKCX hYoXDv"
            color="primary"
            size="large"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa flAlLV"
        >
          <button
            className="sc-ifAKCX duMpxa"
            color="primary"
            size="large"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa flAlLV"
        >
          <button
            className="sc-ifAKCX gFYsCT"
            color="primary"
            size="large"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa flAlLV"
        >
          <button
            className="sc-ifAKCX fGCRra"
            color="primary"
            size="large"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa flAlLV"
        >
          <button
            className="sc-ifAKCX iHpkj"
            color="primary"
            size="large"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa flAlLV"
        >
          <button
            className="sc-ifAKCX jyjiub"
            color="primary"
            size="large"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa flAlLV"
        >
          <button
            className="sc-ifAKCX dgXeQO"
            color="primary"
            size="large"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa flAlLV"
        >
          <button
            className="sc-ifAKCX eBTVTw"
            color="primary"
            size="large"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa flAlLV"
        >
          <button
            className="sc-ifAKCX eXEayX"
            color="secondary"
            size="large"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa flAlLV"
        >
          <button
            className="sc-ifAKCX bBQRSu"
            color="secondary"
            size="large"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa flAlLV"
        >
          <button
            className="sc-ifAKCX fDTlho"
            color="secondary"
            size="large"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa flAlLV"
        >
          <button
            className="sc-ifAKCX dVApMU"
            color="secondary"
            size="large"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa flAlLV"
        >
          <button
            className="sc-ifAKCX bUbltC"
            color="secondary"
            size="large"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa flAlLV"
        >
          <button
            className="sc-ifAKCX cbwGxj"
            color="secondary"
            size="large"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa flAlLV"
        >
          <button
            className="sc-ifAKCX eKBOMl"
            color="secondary"
            size="large"
          >
            ButtonText
          </button>
        </div>
        <div
          className="sc-bdVaJa flAlLV"
        >
          <button
            className="sc-ifAKCX tdrnu"
            color="secondary"
            size="large"
          >
            ButtonText
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Button/Wrapper Button Component 1`] = `
<div>
  <h3
    className="sc-htpNat bmPwTJ"
  >
    Button/Wrapper Button
      →  
    Component
  </h3>
  <div
    className="sc-bxivhb fZfWO"
  >
    <div
      className="sc-bwzfXH EgZdJ"
    >
      <center>
        Not Implemented
      </center>
    </div>
  </div>
</div>
`;

exports[`Storyshots Button/Wrapper Button Prop Combinations 1`] = `
<div>
  <h3
    className="sc-htpNat bmPwTJ"
  >
    Button/Wrapper Button
      →  
    Prop Combinations
  </h3>
  <div
    className="sc-bxivhb fZfWO"
  >
    <div
      className="sc-bwzfXH EgZdJ"
    >
      <div>
        <div
          className="sc-bdVaJa flAlLV"
        >
          <center>
            Not Implemented
          </center>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Card Component 1`] = `
<div>
  <h3
    className="sc-htpNat bmPwTJ"
  >
    Card
      →  
    Component
  </h3>
  <div
    className="sc-bxivhb fZfWO"
  >
    <div
      className="sc-bwzfXH EgZdJ"
    >
      <center>
        Not Implemented
      </center>
    </div>
  </div>
</div>
`;

exports[`Storyshots Card Prop Combinations 1`] = `
<div>
  <h3
    className="sc-htpNat bmPwTJ"
  >
    Card
      →  
    Prop Combinations
  </h3>
  <div
    className="sc-bxivhb fZfWO"
  >
    <div
      className="sc-bwzfXH EgZdJ"
    >
      <div>
        <div
          className="sc-bdVaJa flAlLV"
        >
          <center>
            Not Implemented
          </center>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Divider Component 1`] = `
<div>
  <h3
    className="sc-htpNat bmPwTJ"
  >
    Divider
      →  
    Component
  </h3>
  <div
    className="sc-bxivhb fZfWO"
  >
    <div
      className="sc-bwzfXH EgZdJ"
    >
      <center>
        Not Implemented
      </center>
    </div>
  </div>
</div>
`;

exports[`Storyshots Divider Prop Combinations 1`] = `
<div>
  <h3
    className="sc-htpNat bmPwTJ"
  >
    Divider
      →  
    Prop Combinations
  </h3>
  <div
    className="sc-bxivhb fZfWO"
  >
    <div
      className="sc-bwzfXH EgZdJ"
    >
      <div>
        <div
          className="sc-bdVaJa flAlLV"
        >
          <center>
            Not Implemented
          </center>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Icon Component 1`] = `
<div>
  <h3
    className="sc-htpNat bmPwTJ"
  >
    Icon
      →  
    Component
  </h3>
  <div
    className="sc-bxivhb fZfWO"
  >
    <div
      className="sc-bwzfXH EgZdJ"
    >
      <center>
        Not Implemented
      </center>
    </div>
  </div>
</div>
`;

exports[`Storyshots Icon Prop Combinations 1`] = `
<div>
  <h3
    className="sc-htpNat bmPwTJ"
  >
    Icon
      →  
    Prop Combinations
  </h3>
  <div
    className="sc-bxivhb fZfWO"
  >
    <div
      className="sc-bwzfXH EgZdJ"
    >
      <div>
        <div
          className="sc-bdVaJa flAlLV"
        >
          <center>
            Not Implemented
          </center>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Image Component 1`] = `
<div>
  <h3
    className="sc-htpNat bmPwTJ"
  >
    Image
      →  
    Component
  </h3>
  <div
    className="sc-bxivhb fZfWO"
  >
    <div
      className="sc-bwzfXH EgZdJ"
    >
      <center>
        Not Implemented
      </center>
    </div>
  </div>
</div>
`;

exports[`Storyshots Image Prop Combinations 1`] = `
<div>
  <h3
    className="sc-htpNat bmPwTJ"
  >
    Image
      →  
    Prop Combinations
  </h3>
  <div
    className="sc-bxivhb fZfWO"
  >
    <div
      className="sc-bwzfXH EgZdJ"
    >
      <div>
        <div
          className="sc-bdVaJa flAlLV"
        >
          <center>
            Not Implemented
          </center>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Input Component 1`] = `
<div>
  <h3
    className="sc-htpNat bmPwTJ"
  >
    Input
      →  
    Component
  </h3>
  <div
    className="sc-bxivhb fZfWO"
  >
    <div
      className="sc-bwzfXH EgZdJ"
    >
      <center>
        Not Implemented
      </center>
    </div>
  </div>
</div>
`;

exports[`Storyshots Input Prop Combinations 1`] = `
<div>
  <h3
    className="sc-htpNat bmPwTJ"
  >
    Input
      →  
    Prop Combinations
  </h3>
  <div
    className="sc-bxivhb fZfWO"
  >
    <div
      className="sc-bwzfXH EgZdJ"
    >
      <div>
        <div
          className="sc-bdVaJa flAlLV"
        >
          <center>
            Not Implemented
          </center>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Modal Component 1`] = `
<div>
  <h3
    className="sc-htpNat bmPwTJ"
  >
    Modal
      →  
    Component
  </h3>
  <div
    className="sc-bxivhb fZfWO"
  >
    <div
      className="sc-bwzfXH EgZdJ"
    >
      <center>
        Not Implemented
      </center>
    </div>
  </div>
</div>
`;

exports[`Storyshots Modal Prop Combinations 1`] = `
<div>
  <h3
    className="sc-htpNat bmPwTJ"
  >
    Modal
      →  
    Prop Combinations
  </h3>
  <div
    className="sc-bxivhb fZfWO"
  >
    <div
      className="sc-bwzfXH EgZdJ"
    >
      <div>
        <div
          className="sc-bdVaJa flAlLV"
        >
          <center>
            Not Implemented
          </center>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Row Component 1`] = `
<div>
  <h3
    className="sc-htpNat bmPwTJ"
  >
    Row
      →  
    Component
  </h3>
  <div
    className="sc-bxivhb fZfWO"
  >
    <div
      className="sc-bwzfXH EgZdJ"
    >
      <center>
        Not Implemented
      </center>
    </div>
  </div>
</div>
`;

exports[`Storyshots Row Prop Combinations 1`] = `
<div>
  <h3
    className="sc-htpNat bmPwTJ"
  >
    Row
      →  
    Prop Combinations
  </h3>
  <div
    className="sc-bxivhb fZfWO"
  >
    <div
      className="sc-bwzfXH EgZdJ"
    >
      <div>
        <div
          className="sc-bdVaJa flAlLV"
        >
          <center>
            Not Implemented
          </center>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Tag Component 1`] = `
<div>
  <h3
    className="sc-htpNat bmPwTJ"
  >
    Tag
      →  
    Component
  </h3>
  <div
    className="sc-bxivhb fZfWO"
  >
    <div
      className="sc-bwzfXH EgZdJ"
    >
      <center>
        Not Implemented
      </center>
    </div>
  </div>
</div>
`;

exports[`Storyshots Tag Prop Combinations 1`] = `
<div>
  <h3
    className="sc-htpNat bmPwTJ"
  >
    Tag
      →  
    Prop Combinations
  </h3>
  <div
    className="sc-bxivhb fZfWO"
  >
    <div
      className="sc-bwzfXH EgZdJ"
    >
      <div>
        <div
          className="sc-bdVaJa flAlLV"
        >
          <center>
            Not Implemented
          </center>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Text Component 1`] = `
<div>
  <h3
    className="sc-htpNat bmPwTJ"
  >
    Text
      →  
    Component
  </h3>
  <div
    className="sc-bxivhb fZfWO"
  >
    <div
      className="sc-bwzfXH EgZdJ"
    >
      <center>
        Not Implemented
      </center>
    </div>
  </div>
</div>
`;

exports[`Storyshots Text Prop Combinations 1`] = `
<div>
  <h3
    className="sc-htpNat bmPwTJ"
  >
    Text
      →  
    Prop Combinations
  </h3>
  <div
    className="sc-bxivhb fZfWO"
  >
    <div
      className="sc-bwzfXH EgZdJ"
    >
      <div>
        <div
          className="sc-bdVaJa flAlLV"
        >
          <center>
            Not Implemented
          </center>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots TextArea Component 1`] = `
<div>
  <h3
    className="sc-htpNat bmPwTJ"
  >
    TextArea
      →  
    Component
  </h3>
  <div
    className="sc-bxivhb fZfWO"
  >
    <div
      className="sc-bwzfXH EgZdJ"
    >
      <center>
        Not Implemented
      </center>
    </div>
  </div>
</div>
`;

exports[`Storyshots TextArea Prop Combinations 1`] = `
<div>
  <h3
    className="sc-htpNat bmPwTJ"
  >
    TextArea
      →  
    Prop Combinations
  </h3>
  <div
    className="sc-bxivhb fZfWO"
  >
    <div
      className="sc-bwzfXH EgZdJ"
    >
      <div>
        <div
          className="sc-bdVaJa flAlLV"
        >
          <center>
            Not Implemented
          </center>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Theme Colors 1`] = `
<div>
  <h3
    className="sc-htpNat bmPwTJ"
  >
    Theme
      →  
    Colors
  </h3>
  <div
    className="sc-bxivhb fZfWO"
  >
    <div
      className="sc-bwzfXH EgZdJ"
    >
      <div
        className="sc-EHOje fwuUJE"
      >
        <div
          className="sc-bZQynM etgEpo"
        >
          <div
            className="sc-htoDjs bKhna"
          >
            White
          </div>
          <div
            className="sc-gzVnrw fERSV"
            color="#FFFFFF"
          />
          <div
            className="sc-htoDjs bKhna"
          >
            <div
              className="sc-dnqmqq gVnRJi"
            >
              #FFFFFF
            </div>
          </div>
        </div>
        <div
          className="sc-bZQynM etgEpo"
        >
          <div
            className="sc-htoDjs bKhna"
          >
            Grey 5
          </div>
          <div
            className="sc-gzVnrw hzhyrr"
            color="#EDEFF2"
          />
          <div
            className="sc-htoDjs bKhna"
          >
            <div
              className="sc-dnqmqq gVnRJi"
            >
              #EDEFF2
            </div>
          </div>
        </div>
        <div
          className="sc-bZQynM etgEpo"
        >
          <div
            className="sc-htoDjs bKhna"
          >
            Grey 4
          </div>
          <div
            className="sc-gzVnrw gMpawJ"
            color="#E1E3E6"
          />
          <div
            className="sc-htoDjs bKhna"
          >
            <div
              className="sc-dnqmqq gVnRJi"
            >
              #E1E3E6
            </div>
          </div>
        </div>
        <div
          className="sc-bZQynM etgEpo"
        >
          <div
            className="sc-htoDjs bKhna"
          >
            Grey 3
          </div>
          <div
            className="sc-gzVnrw XgNmS"
            color="#C1C3C6"
          />
          <div
            className="sc-htoDjs bKhna"
          >
            <div
              className="sc-dnqmqq gVnRJi"
            >
              #C1C3C6
            </div>
          </div>
        </div>
        <div
          className="sc-bZQynM etgEpo"
        >
          <div
            className="sc-htoDjs bKhna"
          >
            Grey 2
          </div>
          <div
            className="sc-gzVnrw bAoNuG"
            color="#9B9B9B"
          />
          <div
            className="sc-htoDjs bKhna"
          >
            <div
              className="sc-dnqmqq gVnRJi"
            >
              #9B9B9B
            </div>
          </div>
        </div>
        <div
          className="sc-bZQynM etgEpo"
        >
          <div
            className="sc-htoDjs bKhna"
          >
            Grey 1
          </div>
          <div
            className="sc-gzVnrw jMOYBh"
            color="#666666"
          />
          <div
            className="sc-htoDjs bKhna"
          >
            <div
              className="sc-dnqmqq gVnRJi"
            >
              #666666
            </div>
          </div>
        </div>
        <div
          className="sc-bZQynM etgEpo"
        >
          <div
            className="sc-htoDjs bKhna"
          >
            Black
          </div>
          <div
            className="sc-gzVnrw hQUwR"
            color="#303030"
          />
          <div
            className="sc-htoDjs bKhna"
          >
            <div
              className="sc-dnqmqq gVnRJi"
            >
              #303030
            </div>
          </div>
        </div>
        <div
          className="sc-bZQynM etgEpo"
        >
          <div
            className="sc-htoDjs bKhna"
          >
            Primary Orange
          </div>
          <div
            className="sc-gzVnrw hMTANw"
            color="#FFA700"
          />
          <div
            className="sc-htoDjs bKhna"
          >
            <div
              className="sc-dnqmqq gVnRJi"
            >
              #FFA700
            </div>
          </div>
        </div>
        <div
          className="sc-bZQynM etgEpo"
        >
          <div
            className="sc-htoDjs bKhna"
          >
            Light Orange
          </div>
          <div
            className="sc-gzVnrw ghraY"
            color="#FFBE00"
          />
          <div
            className="sc-htoDjs bKhna"
          >
            <div
              className="sc-dnqmqq gVnRJi"
            >
              #FFBE00
            </div>
          </div>
        </div>
        <div
          className="sc-bZQynM etgEpo"
        >
          <div
            className="sc-htoDjs bKhna"
          >
            Dark Orange
          </div>
          <div
            className="sc-gzVnrw fBFhSz"
            color="#FF8D00"
          />
          <div
            className="sc-htoDjs bKhna"
          >
            <div
              className="sc-dnqmqq gVnRJi"
            >
              #FF8D00
            </div>
          </div>
        </div>
        <div
          className="sc-bZQynM etgEpo"
        >
          <div
            className="sc-htoDjs bKhna"
          >
            Primary Blue
          </div>
          <div
            className="sc-gzVnrw imSaBK"
            color="#0075F7"
          />
          <div
            className="sc-htoDjs bKhna"
          >
            <div
              className="sc-dnqmqq gVnRJi"
            >
              #0075F7
            </div>
          </div>
        </div>
        <div
          className="sc-bZQynM etgEpo"
        >
          <div
            className="sc-htoDjs bKhna"
          >
            Light Blue
          </div>
          <div
            className="sc-gzVnrw exOvMC"
            color="#00CDFF"
          />
          <div
            className="sc-htoDjs bKhna"
          >
            <div
              className="sc-dnqmqq gVnRJi"
            >
              #00CDFF
            </div>
          </div>
        </div>
        <div
          className="sc-bZQynM etgEpo"
        >
          <div
            className="sc-htoDjs bKhna"
          >
            Dark Blue
          </div>
          <div
            className="sc-gzVnrw kANIpf"
            color="#0E91FD"
          />
          <div
            className="sc-htoDjs bKhna"
          >
            <div
              className="sc-dnqmqq gVnRJi"
            >
              #0E91FD
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Theme Gradients 1`] = `
<div>
  <h3
    className="sc-htpNat bmPwTJ"
  >
    Theme
      →  
    Gradients
  </h3>
  <div
    className="sc-bxivhb fZfWO"
  >
    <div
      className="sc-bwzfXH EgZdJ"
    >
      <div
        className="sc-iwsKbI kUkwhG"
      >
        <div
          className="sc-gZMcBi hsXsqw"
        >
          <div
            className="sc-VigVT jfKvj"
          >
            Primary
          </div>
          <div
            className="sc-gqjmRU cCEnXC"
          />
          <div
            className="sc-VigVT jfKvj"
          >
            <div
              className="sc-jTzLTM DLLmq"
            >
              background: 
              linear-gradient(135deg, #00CDFF 0%, #0E91FD 100%)
            </div>
          </div>
        </div>
        <div
          className="sc-gZMcBi hsXsqw"
        >
          <div
            className="sc-VigVT jfKvj"
          >
            Secondary
          </div>
          <div
            className="sc-gqjmRU ekLiEv"
          />
          <div
            className="sc-VigVT jfKvj"
          >
            <div
              className="sc-jTzLTM DLLmq"
            >
              background: 
              linear-gradient(135deg, #FFBE00 0%, #FF8D00 100%)
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Theme Typography 1`] = `
<div>
  <h3
    className="sc-htpNat bmPwTJ"
  >
    Theme
      →  
    Typography
  </h3>
  <div
    className="sc-bxivhb fZfWO"
  >
    <div
      className="sc-bwzfXH EgZdJ"
    >
      <div>
        <h3
          className="sc-fjdhpX jvvweT"
        >
          Font Family 
          <code>
            font-family
          </code>
        </h3>
        <div
          className="sc-jzJRlG hhUSl"
        >
          <h3
            style={
              Object {
                "fontFamily": "monospace",
                "fontSize": 24,
                "padding": 12,
              }
            }
          >
            Poppins
          </h3>
          <div
            className="sc-cSHVUG hlgoUJ"
          >
            <div
              className="sc-chPdSV fzxrBl"
              size={64}
              style={undefined}
            >
              Aa
            </div>
            <div
              className="sc-kAzzGY bLvxCo"
            >
              Regular - 400
            </div>
          </div>
          <div
            className="sc-cSHVUG hlgoUJ"
          >
            <div
              className="sc-chPdSV cVlCTe"
              size={64}
              style={undefined}
            >
              Aa
            </div>
            <div
              className="sc-kAzzGY bLvxCo"
            >
              Medium - 500
            </div>
          </div>
          <div
            className="sc-cSHVUG hlgoUJ"
          >
            <div
              className="sc-chPdSV icHpQy"
              size={64}
              style={undefined}
            >
              Aa
            </div>
            <div
              className="sc-kAzzGY bLvxCo"
            >
              Semi-Bold - 600
            </div>
          </div>
          <div
            className="sc-cSHVUG hlgoUJ"
          >
            <div
              className="sc-chPdSV cHhCiJ"
              size={64}
              style={undefined}
            >
              Aa
            </div>
            <div
              className="sc-kAzzGY bLvxCo"
            >
              Bold - 700
            </div>
          </div>
        </div>
        <h3
          className="sc-fjdhpX jvvweT"
        >
          Font Sizing 
          <code>
            font-size
          </code>
        </h3>
        <div
          className="sc-jzJRlG hhUSl"
        >
          <div
            className="sc-cSHVUG hlgoUJ"
          >
            <div
              className="sc-chPdSV gZzSZi"
              size={12}
              style={undefined}
            >
              Aa
            </div>
            <div
              className="sc-kAzzGY bLvxCo"
            >
              Extra Small - 12px
            </div>
          </div>
          <div
            className="sc-cSHVUG hlgoUJ"
          >
            <div
              className="sc-chPdSV cGTuEG"
              size={14}
              style={undefined}
            >
              Aa
            </div>
            <div
              className="sc-kAzzGY bLvxCo"
            >
              Small - 14px
            </div>
          </div>
          <div
            className="sc-cSHVUG hlgoUJ"
          >
            <div
              className="sc-chPdSV dJIKOJ"
              size={16}
              style={undefined}
            >
              Aa
            </div>
            <div
              className="sc-kAzzGY bLvxCo"
            >
              Medium - 16px
            </div>
          </div>
          <div
            className="sc-cSHVUG hlgoUJ"
          >
            <div
              className="sc-chPdSV ctDDEM"
              size={24}
              style={undefined}
            >
              Aa
            </div>
            <div
              className="sc-kAzzGY bLvxCo"
            >
              Large - 24px
            </div>
          </div>
          <div
            className="sc-cSHVUG hlgoUJ"
          >
            <div
              className="sc-chPdSV bFZztA"
              size={30}
              style={undefined}
            >
              Aa
            </div>
            <div
              className="sc-kAzzGY bLvxCo"
            >
              Extra Large - 30px
            </div>
          </div>
        </div>
        <h3
          className="sc-fjdhpX jvvweT"
        >
          Font Leading 
          <code>
            line-height
          </code>
        </h3>
        <div
          className="sc-jzJRlG hhUSl"
        >
          <div
            className="sc-cSHVUG hlgoUJ"
          >
            <div
              className="sc-chPdSV dCxum"
              size={16}
              style={
                Object {
                  "maxWidth": 240,
                  "padding": "0px 10px",
                }
              }
            >
              Paradigm shift analytics traction twitter business to consumer influencer growth hacking focus.
            </div>
            <div
              className="sc-kAzzGY bLvxCo"
            >
              Extra Small - 18px
            </div>
          </div>
          <div
            className="sc-cSHVUG hlgoUJ"
          >
            <div
              className="sc-chPdSV dCxum"
              size={16}
              style={
                Object {
                  "maxWidth": 240,
                  "padding": "0px 10px",
                }
              }
            >
              Paradigm shift analytics traction twitter business to consumer influencer growth hacking focus.
            </div>
            <div
              className="sc-kAzzGY bLvxCo"
            >
              Small - 20px
            </div>
          </div>
          <div
            className="sc-cSHVUG hlgoUJ"
          >
            <div
              className="sc-chPdSV kyavAe"
              size={16}
              style={
                Object {
                  "maxWidth": 240,
                  "padding": "0px 10px",
                }
              }
            >
              Paradigm shift analytics traction twitter business to consumer influencer growth hacking focus.
            </div>
            <div
              className="sc-kAzzGY bLvxCo"
            >
              Medium - 24px
            </div>
          </div>
          <div
            className="sc-cSHVUG hlgoUJ"
          >
            <div
              className="sc-chPdSV ecAuwZ"
              size={16}
              style={
                Object {
                  "maxWidth": 240,
                  "padding": "0px 10px",
                }
              }
            >
              Paradigm shift analytics traction twitter business to consumer influencer growth hacking focus.
            </div>
            <div
              className="sc-kAzzGY bLvxCo"
            >
              Large - 30px
            </div>
          </div>
          <div
            className="sc-cSHVUG hlgoUJ"
          >
            <div
              className="sc-chPdSV bkcfHE"
              size={16}
              style={
                Object {
                  "maxWidth": 240,
                  "padding": "0px 10px",
                }
              }
            >
              Paradigm shift analytics traction twitter business to consumer influencer growth hacking focus.
            </div>
            <div
              className="sc-kAzzGY bLvxCo"
            >
              Extra Large - 36px
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Toggle Component 1`] = `
<div>
  <h3
    className="sc-htpNat bmPwTJ"
  >
    Toggle
      →  
    Component
  </h3>
  <div
    className="sc-bxivhb fZfWO"
  >
    <div
      className="sc-bwzfXH EgZdJ"
    >
      <center>
        Not Implemented
      </center>
    </div>
  </div>
</div>
`;

exports[`Storyshots Toggle Prop Combinations 1`] = `
<div>
  <h3
    className="sc-htpNat bmPwTJ"
  >
    Toggle
      →  
    Prop Combinations
  </h3>
  <div
    className="sc-bxivhb fZfWO"
  >
    <div
      className="sc-bwzfXH EgZdJ"
    >
      <div>
        <div
          className="sc-bdVaJa flAlLV"
        >
          <center>
            Not Implemented
          </center>
        </div>
      </div>
    </div>
  </div>
</div>
`;
